IVYPORTAL-7318: Various or urgent requests in IVYPORTAL S173 - Fixed bug: "Show all Task" link in case details does not aligned properly when there is no related tasks

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -3388,7 +3388,7 @@ _:-ms-input-placeholder, :root .case-details > * {
 }
 
 .case-detail-no-related-task-case {
-  height: 185px;
+  height: 203px;
   align-items: baseline;
 }
 
